plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: plex.seymour.family
    http:
      paths:
      - backend:
          service:
            name: plex
            port:
              name: pms
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.seymour.family
    secretName: plex-cert
